--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,76 @@
 /* You can add global styles to this file, and also import other style files */
+
+body, html {
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Playfair Display', serif;
+}
+p,a,button,input,label,li {
+    font-family: 'Quicksand', sans-serif;
+}
+
+header {
+    padding-top: .5em;
+    padding-bottom: .5em;
+}
+
+.navbar-brand img {
+    max-width: 130px;
+}
+
+header .navbar-light .navbar-nav .nav-link {
+    color: #393939;
+    font-weight: 600;
+    padding: 0 18px;
+}
+form.header-form-cta a {
+    text-decoration: none;
+    display: inline-block;
+    font-weight: 600;
+    border-radius: 45px;
+    -webkit-border-radius: 45px;
+    padding: 4px 24px;
+    line-height: 33px;
+}
+form.header-form-cta .login {
+    color: #226fe3;
+    border: 1px solid #226fe3;
+    margin-right: 1em;
+    margin-left: 0.8em;
+}
+form.header-form-cta .signup {
+    background-color: #226fe3;
+    color: #fff;
+    
+}
+.slide-p {
+    text-align: center;
+    font-size: 2em;
+    font-weight: 500;
+}
+.slider {
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
+}
+.slider-cta {
+    display: flex;
+    display: -webkit-flex;
+    align-items: center;
+    justify-content: center;
+}
+.slider-cta a {
+    color: #fff!important;
+    background-color: #226fe3;
+    text-decoration: none!important;
+    display: inline-block;
+    font-weight: 600;
+    border-radius: 45px;
+    -webkit-border-radius: 45px;
+    padding: 4px 24px;
+    line-height: 33px;
+}
+
