--- a/src/app/userlogin/userlogin.component.html
+++ b/src/app/userlogin/userlogin.component.html
@@ -1,2 +1,39 @@
 
-<h1>Hi this is the login page</h1>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div id="login">
+                <h1 class="font-weight-bold text-center mb-5">Start Free Trial</h1>
+                <div class="form-container">
+                    <form action="">
+                        <div class="form-group">
+                            <label for="">Username/Email</label>
+                            <input type="text" class="form-control" placeholder="Username/Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="">Password</label>
+                            <input type="text" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="rem-forget d-flex justify-content-between mb-3">
+                            <div class="rem">
+                                <input type="checkbox" class="checkbox-light"> Remember me
+                            </div>
+                            <a href="" class="forgot">Forgot password ? </a>
+                        </div>
+                        <div class="form-group">
+                            <button type="button" class="login-btn">Login</button>
+                        </div>
+                    </form>
+                    <div class="seperator d-flex justify-content-around align-items-center">
+                        <span class="seperator-line"></span>
+                        <label for="" class="m-0">OR</label>
+                        <span class="seperator-line"></span>
+                    </div>
+                    <a href="" class="signin-with">Sign in with google</a>
+                    <a href="" class="signin-with">Sign in with Facebook</a>
+                   
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
