--- a/src/styles.css
+++ b/src/styles.css
@@ -73,4 +73,46 @@ form.header-form-cta .signup {
     padding: 4px 24px;
     line-height: 33px;
 }
-
+#login {
+    background-color: #fff;
+    box-shadow: 0px 0px 46px -9px rgb(0 0 0 / 20%);
+    -webkit-box-shadow: 0px 0px 46px -9px rgb(0 0 0 / 20%);
+    padding: 48px 82px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+}
+.login-btn{
+    width: 100%;
+    display: block;
+    outline: none;
+    font-size: 15px;
+    font-weight: 600;
+    border: 1px solid #226fe3;
+    line-height: 31px;
+    padding: 4px 24px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    background-color: #226fe3;
+    color: #fff;
+}
+.rem {
+    font-size: 14px;
+    color: #393939;
+    font-weight: 300;
+}
+.forgot {
+    font-size: 14px;
+    text-decoration: none!important;
+    color: #226fe3;
+}
+.seperator-line {
+    width: 150px;
+    height: 1px;
+    background-color: #393939;
+}
+.seperator label {
+    font-size: 14px;
+}
+.signin-with {
+    
+}
